create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1803,72 +1803,506 @@ body {
     padding-right: 0rem;
   }
 }
-.cid-qTFiGzImWt {
+.cid-qTFIeoTzTI {
   padding-top: 60px;
   padding-bottom: 60px;
   background-color: #ffffff;
 }
-.cid-qTFiGzImWt *:focus {
+.cid-qTFIeoTzTI *:focus {
   outline: none;
 }
-.cid-qTFiGzImWt .input-wrap {
+.cid-qTFIeoTzTI .input-wrap {
   padding-bottom: 1rem;
 }
-.cid-qTFiGzImWt input,
-.cid-qTFiGzImWt textarea {
+.cid-qTFIeoTzTI input,
+.cid-qTFIeoTzTI textarea {
   width: 100%;
   background: #efefef;
   border-radius: 0;
   border: none;
 }
-.cid-qTFiGzImWt input {
+.cid-qTFIeoTzTI input {
   padding: .5rem;
 }
-.cid-qTFiGzImWt ::-webkit-input-placeholder {
+.cid-qTFIeoTzTI ::-webkit-input-placeholder {
   color: #000000;
 }
-.cid-qTFiGzImWt ::-moz-placeholder {
+.cid-qTFIeoTzTI ::-moz-placeholder {
   color: #000000;
 }
-.cid-qTFiGzImWt :-ms-input-placeholder {
+.cid-qTFIeoTzTI :-ms-input-placeholder {
   color: #000000;
 }
-.cid-qTFiGzImWt :-moz-placeholder {
+.cid-qTFIeoTzTI :-moz-placeholder {
   color: #000000;
 }
-.cid-qTFiGzImWt .soc-item {
+.cid-qTFIeoTzTI .soc-item {
   display: inline-block;
   margin: 0 .1rem .2rem .1rem;
   padding: 10px 11px 0 11px;
   border: 2px solid #69b9d0;
   border-radius: 50%;
 }
-.cid-qTFiGzImWt .soc-item:hover {
+.cid-qTFIeoTzTI .soc-item:hover {
   opacity: .5;
 }
-.cid-qTFiGzImWt .soc-item .socicon {
+.cid-qTFIeoTzTI .soc-item .socicon {
   font-size: 1.5rem;
   color: #69b9d0;
 }
-.cid-qTFiGzImWt .days-column,
-.cid-qTFiGzImWt .hours-column {
+.cid-qTFIeoTzTI .days-column,
+.cid-qTFIeoTzTI .hours-column {
   display: inline-block;
 }
-.cid-qTFiGzImWt .days-column span,
-.cid-qTFiGzImWt .hours-column span {
+.cid-qTFIeoTzTI .days-column span,
+.cid-qTFIeoTzTI .hours-column span {
   display: block;
 }
-.cid-qTFiGzImWt .input-group-btn {
+.cid-qTFIeoTzTI .input-group-btn {
   display: block;
 }
 @media (max-width: 767px) {
-  .cid-qTFiGzImWt .days-column {
+  .cid-qTFIeoTzTI .days-column {
     padding-right: 0 !important;
   }
-  .cid-qTFiGzImWt .hours-column {
+  .cid-qTFIeoTzTI .hours-column {
     max-width: 50% !important;
   }
-  .cid-qTFiGzImWt .opening-hours {
+  .cid-qTFIeoTzTI .opening-hours {
+    padding-bottom: 48px !important;
+  }
+}
+.cid-qTEWPC6lbA .nav-item:focus,
+.cid-qTEWPC6lbA .nav-link:focus {
+  outline: none;
+}
+.cid-qTEWPC6lbA .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-qTEWPC6lbA .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-qTEWPC6lbA .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-left: -1.8rem;
+  padding-right: 1rem;
+  font-size: inherit;
+}
+.cid-qTEWPC6lbA .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  -webkit-transition: all 0.25s ease-in-out;
+  -moz-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.cid-qTEWPC6lbA .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-qTEWPC6lbA .navbar {
+  min-height: 77px;
+  transition: all .3s;
+  background: #6796c4;
+  background: none;
+}
+.cid-qTEWPC6lbA .navbar.opened {
+  transition: all .3s;
+  background: #6796c4 !important;
+}
+.cid-qTEWPC6lbA .navbar .dropdown-item {
+  padding: .235rem 1.5rem;
+}
+.cid-qTEWPC6lbA .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-qTEWPC6lbA .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .dropdown-menu {
+  background: transparent !important;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: .25rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 55%;
+}
+.cid-qTEWPC6lbA .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: .25rem 1.5rem;
+  text-align: center;
+}
+.cid-qTEWPC6lbA .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+}
+@media (max-width: 991px) {
+  .cid-qTEWPC6lbA .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-qTEWPC6lbA .navbar .dropdown-menu {
+    background: transparent !important;
+  }
+  .cid-qTEWPC6lbA .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-qTEWPC6lbA .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-qTEWPC6lbA .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: .25rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 55%;
+  }
+  .cid-qTEWPC6lbA .navbar .navbar-logo img {
+    height: 3.8rem !important;
+  }
+  .cid-qTEWPC6lbA .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-qTEWPC6lbA .navbar .dropdown-menu .dropdown-item {
+    padding: .25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-qTEWPC6lbA .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+  }
+  .cid-qTEWPC6lbA .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-qTEWPC6lbA .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+  }
+}
+.cid-qTEWPC6lbA .navbar.navbar-short {
+  background: #6796c4 !important;
+  min-height: 60px;
+}
+.cid-qTEWPC6lbA .navbar.navbar-short .navbar-logo img {
+  height: 3rem !important;
+}
+.cid-qTEWPC6lbA .navbar.navbar-short .navbar-brand {
+  padding: 0;
+}
+.cid-qTEWPC6lbA .navbar-brand {
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all .3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-qTEWPC6lbA .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-qTEWPC6lbA .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-qTEWPC6lbA .dropdown-item.active,
+.cid-qTEWPC6lbA .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-qTEWPC6lbA .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-qTEWPC6lbA .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-qTEWPC6lbA .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-qTEWPC6lbA .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #6796c4;
+}
+.cid-qTEWPC6lbA .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-qTEWPC6lbA .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-qTEWPC6lbA ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-qTEWPC6lbA .navbar-buttons {
+  text-align: center;
+}
+.cid-qTEWPC6lbA button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all .2s;
+  position: relative;
+  align-self: center;
+}
+.cid-qTEWPC6lbA button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-qTEWPC6lbA button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-qTEWPC6lbA button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qTEWPC6lbA button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-qTEWPC6lbA button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-qTEWPC6lbA nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qTEWPC6lbA nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-qTEWPC6lbA nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-qTEWPC6lbA nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-qTEWPC6lbA .navbar-dropdown {
+  padding: .5rem 1rem;
+  position: fixed;
+}
+.cid-qTEWPC6lbA a.nav-link {
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+.cid-qTEWPC6lbA .mbr-iconfont {
+  font-size: 1.5rem;
+  padding-right: .5rem;
+}
+.cid-qTEWPC6lbA .icons-menu {
+  flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  text-align: center;
+}
+.cid-qTEWPC6lbA .icons-menu span {
+  font-size: 20px;
+  color: #232323;
+}
+.cid-qTEWPC6lbA .nav-link:hover,
+.cid-qTEWPC6lbA .dropdown-item:hover,
+.cid-qTEWPC6lbA .icons-menu .mbr-iconfont:hover {
+  color: #6796c4 !important;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-qTEWPC6lbA .navbar {
+    height: 77px;
+  }
+  .cid-qTEWPC6lbA .navbar.opened {
+    height: auto;
+  }
+}
+.cid-qTFFVPCDhu {
+  background-image: url("../../../assets/images/maxresdefault-1-1920x1080.jpg");
+}
+.cid-qTFFVPCDhu .form-block {
+  background: #444444;
+  padding: 2rem;
+  outline: 1px dashed #ffda73;
+  outline-offset: -15px;
+}
+.cid-qTFFVPCDhu .mbr-section-title {
+  margin: 0;
+}
+.cid-qTFFVPCDhu .row {
+  justify-content: space-between;
+  align-items: center;
+}
+.cid-qTFFVPCDhu .input-wrap {
+  padding: 0;
+  margin-bottom: 1.3em;
+}
+.cid-qTFFVPCDhu .input-wrap input {
+  border: 1px solid #ddd;
+  width: 100%;
+  padding: .5rem 1rem;
+}
+.cid-qTFFVPCDhu .mbr-section-btn .btn {
+  margin-left: 4px !important;
+}
+.cid-qTFFVPCDhu .input-group-btn {
+  display: block;
+}
+@media (max-width: 767px) {
+  .cid-qTFFVPCDhu .text-element {
+    padding-bottom: 1rem;
+  }
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-qTFFVPCDhu .form-block {
+    border: 1px dashed #ffda73;
+    outline: 15px solid #444444;
+  }
+}
+.cid-qTFFVPCDhu .mbr-section-title,
+.cid-qTFFVPCDhu .underline {
+  text-align: center;
+  color: #6796c4;
+}
+.cid-qTFFVPCDhu .mbr-section-subtitle,
+.cid-qTFFVPCDhu .mbr-section-btn DIV {
+  text-align: left;
+}
+.cid-qTFH5phzqE {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-qTFH5phzqE *:focus {
+  outline: none;
+}
+.cid-qTFH5phzqE .form-1 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+.cid-qTFH5phzqE .img-block img {
+  object-fit: cover;
+  object-position: center center;
+  height: 100%;
+}
+.cid-qTFH5phzqE .mbr-figure {
+  height: 100%;
+}
+.cid-qTFH5phzqE .input-wrap {
+  padding-bottom: 1rem;
+  position: relative;
+}
+.cid-qTFH5phzqE .input-wrap input {
+  width: 100%;
+  padding: 10px 20px;
+  border: 1px solid #dedede;
+}
+.cid-qTFH5phzqE .btn-row {
+  display: flex;
+  justify-content: center;
+}
+@media (max-width: 767px) {
+  .cid-qTFH5phzqE .img-block {
+    padding-bottom: 3rem;
+  }
+  .cid-qTFH5phzqE .form-1 {
+    padding-top: 0;
+  }
+}
+.cid-qTFIkNUdXR {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-qTFIkNUdXR *:focus {
+  outline: none;
+}
+.cid-qTFIkNUdXR .input-wrap {
+  padding-bottom: 1rem;
+}
+.cid-qTFIkNUdXR input,
+.cid-qTFIkNUdXR textarea {
+  width: 100%;
+  background: #efefef;
+  border-radius: 0;
+  border: none;
+}
+.cid-qTFIkNUdXR input {
+  padding: .5rem;
+}
+.cid-qTFIkNUdXR ::-webkit-input-placeholder {
+  color: #000000;
+}
+.cid-qTFIkNUdXR ::-moz-placeholder {
+  color: #000000;
+}
+.cid-qTFIkNUdXR :-ms-input-placeholder {
+  color: #000000;
+}
+.cid-qTFIkNUdXR :-moz-placeholder {
+  color: #000000;
+}
+.cid-qTFIkNUdXR .soc-item {
+  display: inline-block;
+  margin: 0 .1rem .2rem .1rem;
+  padding: 10px 11px 0 11px;
+  border: 2px solid #69b9d0;
+  border-radius: 50%;
+}
+.cid-qTFIkNUdXR .soc-item:hover {
+  opacity: .5;
+}
+.cid-qTFIkNUdXR .soc-item .socicon {
+  font-size: 1.5rem;
+  color: #69b9d0;
+}
+.cid-qTFIkNUdXR .days-column,
+.cid-qTFIkNUdXR .hours-column {
+  display: inline-block;
+}
+.cid-qTFIkNUdXR .days-column span,
+.cid-qTFIkNUdXR .hours-column span {
+  display: block;
+}
+.cid-qTFIkNUdXR .input-group-btn {
+  display: block;
+}
+@media (max-width: 767px) {
+  .cid-qTFIkNUdXR .days-column {
+    padding-right: 0 !important;
+  }
+  .cid-qTFIkNUdXR .hours-column {
+    max-width: 50% !important;
+  }
+  .cid-qTFIkNUdXR .opening-hours {
     padding-bottom: 48px !important;
   }
 }
